<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="pref_track_distance"
            android:title="@string/pref_track_distance"
            android:summary="@string/pref_track_distance_summary"
            android:defaultValue="true"/>

    <CheckBoxPreference
            android:key="pref_high_priority"
            android:title="@string/pref_high_priority"
            android:summary="@string/pref_high_priority_summary"
            android:defaultValue="true"/>

    <CheckBoxPreference
            android:key="pref_show_next_hack_time"
            android:title="@string/pref_show_next_hack_time"
            android:summary="@string/pref_show_next_hack_time_summary"
            android:defaultValue="true"/>

    <CheckBoxPreference
            android:key="pref_buzz_if_hackable"
            android:title="@string/pref_buzz_if_hackable"
            android:summary="@string/pref_buzz_if_hackable_summary"
            android:defaultValue="true"/>

</PreferenceScreen>