<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_hack"
            android:icon="@drawable/ic_location_place"
            android:showAsAction="always|withText"
            android:title="@string/hack">
    </item>

    <item
            android:id="@+id/menu_set_cooldown"
            android:icon="@drawable/ic_menu_cooldown_time"
            android:showAsAction="always|withText"
            android:title="@string/set_cooldown">
    </item>

    <item
            android:id="@+id/menu_burned"
            android:icon="@drawable/ic_menu_burn"
            android:showAsAction="always|withText"
            android:title="@string/burned">
    </item>

    <item
            android:id="@+id/menu_delete"
            android:icon="@drawable/ic_content_discard"
            android:showAsAction="always|withText"
            android:title="@string/delete">
    </item>

</menu>